[package]
name = "epimetheus"
version = "0.1.0"
authors = ["sunny <qi.cao@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_derive = "1.0"
epimetheus_tools= { path = "./epimetheus_tools" }